add reinforcement learning functionality

--- a/.gitignore
+++ b/.gitignore
@@ -185,3 +185,6 @@ fabric.properties
 .idea
 .idea/misc.xml
 .idea/workspace.xml
+/src/ppo_pendubot_logs/
+/src/ppo_pendubot_tensorboard/
+/old_runs/
